# VulkanFunStuff

./: .gitignore  CMakeLists.txt  compile_shaders.sh
include/: Application.hpp  MainWindow.hpp  Size.hpp  Utils.hpp  WindowInterface.hpp
shaders/: Basic.vert
src/: Application.cpp  MainWindow.cpp  main.cpp
